//@author Daniel St Andrews
//Created: 3/26/2022
//Purpose: Call helper methods to test ADT AddressBook and AGenericADTSortedList.
//Note: Index starts at zero because starting at 0 or 1 was not specified.

public class Driver {

    public static void main(String[] args){

        Helper helper = new Helper();

        //Tests methods in way specified by instructions.
        helper.otherStart();

        //Tests methods fully with all non specified methods in instructions, as well as specified ones.
        helper.start();

    }

}
