@startuml

title __Project 3 Class Diagram__\n

  namespace standrews.daniel {
    class AGenericADTSortedList {
        ~ head : Node<E>
        ~ len : int
        ~ tail : Node<E>
        + AGenericADTSortedList()
        + add()
        + delete()
        + equals()
        + fixIndex()
        + isEmpty()
        + makeEmpty()
        + numMembers()
        + search()
        + toString()
    }
  }
  

  namespace standrews.daniel {
    class AddressBook {
        ~ list : AGenericADTSortedList<Contact>
        + AddressBook()
        + AddressBook()
        + delete()
        + equals()
        + getLen()
        + insert()
        + isEmpty()
        + makeEmpty()
        + sameArea()
        + sameLast()
        + search()
        + toString()
    }
  }
  

  namespace standrews.daniel {
    class Contact {
        ~ firstName : String
        ~ lastName : String
        ~ phoneNumber : String
        + Contact()
        + Contact()
        + compareTo()
        + toString()
    }
  }
  

  namespace standrews.daniel {
    class Driver {
        {static} + main()
    }
  }
  

  namespace standrews.daniel {
    class Helper {
        {static} + deletePrint()
        {static} + otherStart()
        {static} + readIn()
        {static} + start()
    }
  }
  

  namespace standrews.daniel {
    class Node {
        + index : int
        + next : Node<E>
        + previous : Node<E>
        + Node()
        + Node()
        + getMember()
        + getNext()
        + getPos()
        + getPrev()
        + setMember()
        + setNext()
        + setPos()
        + setPrev()
    }
  }
  

  AddressBook o-- Contact : contact
  Contact .up.|> java.lang.Comparable
  Node o-- E : member


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
endfooter

@enduml
